recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if(l==Nil)
  	return 0
  else if(l.head==v)
  	return 1 + occurences(l.tail,v)
  else
  	return occurences(l.tail,v)
    
  
}